<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture_test"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainWindow">
    <Button
        android:id="@+id/theory"
        android:layout_width="119dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        android:onClick="onTheoryClicked"
        android:text="@string/theory"
        app:backgroundTint="@color/teal_700" />
    <Button
        android:id="@+id/practice"
        android:layout_width="119dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        android:onClick="onPracticeClicked"
        android:text="@string/practice"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/helpList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#0000"
        android:onClick="onServicesClicked"
        android:text="@string/helpList"
        android:textColor="@color/white"
        android:textSize="11dp" />

    <Button
        android:id="@+id/booksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#0000"
        android:onClick="onBooksClicked"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="11dp" />
</LinearLayout>
