<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4FFF4"
    tools:context=".activities.PsyServices">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameViewService1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hyphenationFrequency="full"
                android:text="@string/psyService1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/mchs" />

            <TextView
                android:id="@+id/textViewService1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textColorLink="@color/purple_500"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewService2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewService3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService4"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/vshe" />

            <TextView
                android:id="@+id/textViewService4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService5"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/psysovet" />

            <TextView
                android:id="@+id/textViewService5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService6"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/we_are_close" />

            <TextView
                android:id="@+id/textViewService6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService7"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/b17" />

            <TextView
                android:id="@+id/textViewService7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService8"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/help_others" />

            <TextView
                android:id="@+id/textViewService8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameViewService9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hyphenationFrequency="full"
                android:text="@string/psyService9"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/violence_no" />

            <TextView
                android:id="@+id/textViewService9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColorLink="@color/purple_500"
                android:hyphenationFrequency="full"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
