<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activities.RorschachTest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rorschach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rorschachTest"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_margin = "6dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/imageRorschach"
            app:layout_constraintTop_toBottomOf="@id/rorschach"
            android:layout_marginVertical="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardnumb"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginRight="4dp"/>

            <TextView
                android:id="@+id/numberCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageRorschach"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            app:layout_constraintTop_toBottomOf="@id/layoutNumb"
            app:layout_constraintBottom_toTopOf="@id/nameRorschach"/>

        <TextView
            android:id="@+id/nameRorschach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/questRorschach"/>

        <TextView
            android:id="@+id/questRorschach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/nameRorschach"/>

        <Button
            android:id="@+id/findAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/author"
            android:layout_marginVertical="12dp"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintBottom_toBottomOf="@id/author"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
